# mak-suite

./: .gitignore  README.md
cpp/: .gitignore  CMakeLists.txt  README.md  api-reference.html  build.bat  build.sh
cpp/.github/workflows/: ci.yml
cpp/examples/: CMakeLists.txt  README.md  basic_usage.cpp  baud_rate_test.cpp  build.bat  build.sh  c_api_test.c  demo.cpp  keyboard_usage.cpp
cpp/makxd-cpp/include/: makxd.h  makxd_c.h  makxd_stream.h  serialport.h
cpp/makxd-cpp/src/: makxd.cpp  makxd_c.cpp  serialport.cpp
csharp/: README.md  makxd_stream.cs  mouse.cs
net/cpp/: CMakeLists.txt  README.md
net/cpp/examples/: basic.cpp
net/cpp/include/: makxd_net.h
net/cpp/src/: makxd_net.cpp
net/cpp/tests/: net_client_tests.cpp
protocol/: MAKXD_PROTOCOL.md
python/: .gitignore  README.md  pyproject.toml  requirements.txt
python/makxd/: __init__.py  __init__.pyi  __main__.py  connection.py  controller.py  enums.py  errors.py  keyboard.py  mouse.py  py.typed  stream.py
python/tests/: conftest.py  test_keyboard.py  test_response_contract.py  test_suite.py
rust/: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
rust/.github/workflows/: ci.yml
rust/examples/: basic.rs  benchmark.rs  comprehensive.rs  mock.rs
rust/src/: lib.rs  stream.rs
rust/src/batch/: builder.rs  mod.rs
rust/src/device/: buttons.rs  catch.rs  info.rs  keyboard.rs  locks.rs  mod.rs  movement.rs  stream.rs
rust/src/error/: mod.rs
rust/src/extras/: catch.rs  click.rs  events.rs  mod.rs  smooth.rs
rust/src/profiler/: mod.rs
rust/src/protocol/: builder.rs  constants.rs  keyboard.rs  mod.rs  parser.rs
rust/src/transport/: mock.rs  mod.rs  monitor.rs  reader.rs  serial.rs  writer.rs
rust/src/types/: button.rs  catch.rs  device_info.rs  keyboard.rs  lock.rs  mod.rs
